--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- 👇👇👇 바로 이 부분! 오픈 그래프(OG) 태그 👇👇👇 -->
+    <meta property="og:title" content="우림금속 | 신뢰의 비철금속 전문 기업">
+    <meta property="og:description" content="황동봉, 동, 신주 등 최고 품질의 원자재를 전문으로 공급합니다.">
+    <meta property="og:image" content="https://plus.unsplash.com/premium_photo-1661963247622-be10e1ea2c25?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <meta property="og:url" content="https://gawooklee.github.io/test-website/">
+    <!-- 👆👆👆 여기까지가 필수 OG 태그 입니다 👆👆👆 -->
     <title>정밀 비철금속 공급 전문기업 | 우림금속</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css" rel="stylesheet">
@@ -125,7 +131,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2">
-                    <img src="https://images.unsplash.com/photo-1571902943202-507ec2618e8f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="공장 내부" class="rounded-lg shadow-xl">
+                    <img src="https://plus.unsplash.com/premium_photo-1661963247622-be10e1ea2c25?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="공장 내부" class="rounded-lg shadow-xl">
                 </div>
             </div>
             
@@ -276,7 +282,7 @@
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                 <div class="equipment-card bg-gray-50 rounded-lg overflow-hidden shadow-md">
-                    <img src="https://images.unsplash.com/photo-1597852074816-d933c7d2b988?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="정밀 가공 설비" class="w-full h-64 object-cover">
+                    <img src="https://images.unsplash.com/photo-1645754884761-6ada0d53807b?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="정밀 가공 설비" class="w-full h-64 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-gmarket font-bold text-[#0A2342] mb-2">정밀 가공 설비</h3>
                         <p class="text-gray-700">CNC 선반,  밀링머신 등 최신 정밀 가공 설비를 보유하여 미세한 공차까지 정확하게 가공합니다.</p>
